--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  --line-color: #e5e7eb;
+}
+
+
+
+@media only screen and (min-width: 1169px) {
+  .vertical-timeline-element-date
+  {
+    /* This is for the date format make it a little less crumpled*/
+    padding-left: 0.75rem !important;
+    padding-right: 0.75rem !important;
+  }
+  .vertical-timeline-element
+  {
+    /* This is to make cards bigger*/
+  width: 80rem !important;
+  left: -7.1rem !important;
+  }
+
+}
+
