--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,6 @@ html {
   --line-color: #e5e7eb;
 }
 
-
-
 @media only screen and (min-width: 1169px) {
   .vertical-timeline-element-date
   {
@@ -22,5 +20,9 @@ html {
   left: -7.1rem !important;
   }
 
+}
+
+.borderBlack {
+  @apply border border-black/10;
 }
 
